--- a/README
+++ b/README
@@ -11,6 +11,7 @@ Needs :
 
 You have to create :
 - ansible_host from ansible_host.example
+- group_vars/all from group_vars/all.example
 - a vars file for each jail host in host_vars from jailhost.domain.example
 
 Scrips :
